Made an animator, added gitignore (was removed?)

--- a/UnityChanAnimationHomework/UnityChanAnimationHomework.CSharp.csproj
+++ b/UnityChanAnimationHomework/UnityChanAnimationHomework.CSharp.csproj
@@ -66,9 +66,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\CharacterAnimatorControllerScript.cs" />
     <Compile Include="Assets\FightingUnityChan_FreeAsset\FightingUnityChan_FreeAsset\Scripts\CameraController.cs" />
     <Compile Include="Assets\FightingUnityChan_FreeAsset\FightingUnityChan_FreeAsset\Scripts\IdleChanger.cs" />
+    <Compile Include="Assets\Script\CharacterAnimatorControllerScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\FightingUnityChan_FreeAsset\FightingUnityChan_FreeAsset\Models\UnityChanShader\Shader\Unitychan_chara_akarami_blend.shader" />
